@@ -12,72 +12,46 @@
 
 import re
 
+
 class DefaultCC(object):
     """Class representing components' default CC lists
     """
 
-    def __init__(self, env, name=None, db=None):
+    def __init__(self, env, name=None):
         self.env = env
+        self.log = self.env.log
         self.name = name
         self.cc = None
         if name:
-            if not db:
-                db = self.env.get_db_cnx()
-            cursor = db.cursor()
-            cursor.execute("""
-                SELECT cc FROM component_default_cc WHERE name=%s
-                """, (name,))
-            row = cursor.fetchone()
-            if row:
-                self.cc = row[0] or None
+            for cc, in self.env.db_query("""
+                    SELECT cc FROM component_default_cc WHERE name=%s
+                    """, (name,)):
+                self.cc = cc or None
 
     def delete(self, db=None):
-        if not db:
-            db = self.env.get_db_cnx()
-            handle_ta = True
-        else:
-            handle_ta = False
-
-        cursor = db.cursor()
-        self.env.log.info("Deleting component %s's default CC" % self.name)
-        cursor.execute("""
+        self.log.info("Deleting component %s's default CC" % self.name)
+        self.env.db_transaction("""
             DELETE FROM component_default_cc WHERE name=%s
             """, (self.name,))
-
-        if handle_ta:
-            db.commit()
 
     def insert(self, db=None):
         assert self.name, "Cannot create default CC for a component" \
                           " without a name"
-        if not db:
-            db = self.env.get_db_cnx()
-            handle_ta = True
-        else:
-            handle_ta = False
 
-        cursor = db.cursor()
-        self.env.log.debug("Creating %s's default CC" % self.name)
-        cursor.execute("""
+        self.log.debug("Creating %s's default CC" % self.name)
+        self.env.db_transaction("""
             INSERT INTO component_default_cc (name,cc) VALUES (%s,%s)
             """, (self.name, _fixup_cc_list(self.cc)))
 
-        if handle_ta:
-            db.commit()
-
     @classmethod
     def select(cls, env, db=None):
-        if not db:
-            db = env.get_db_cnx()
-        cursor = db.cursor()
-        cursor.execute("""
-            SELECT name,cc FROM component_default_cc ORDER BY name
-            """)
         res = {}
-        for name, cc in cursor:
+        for name, cc in env.db_query("""
+                SELECT name,cc FROM component_default_cc ORDER BY name
+                """):
             res[name] = cc
-
         return res
+
 
 def _fixup_cc_list(cc_value):
     """Fix up cc list separators and remove duplicates."""
